# crunch

./: .editorconfig  .gitignore  ACCUMULATOR.md  CMakeLists.txt  Cargo.toml  LoadData.cpp  README.md  Stagger.py  Types.cpp  build.rs  caching.py  credentials.fmt  crunch  main.cpp  main.py  requirements.txt  ruff.toml  setup.cfg  temp.cpp  wcl_requests.py
analysis/: Cargo.toml
analyzers/: Stagger.py  __init__.py  aspect_of_harmony.py  behaviour_checker.py  draw_boss_path.py  dual_threat.py  flaming_germination.py  helper.py  ignited_essence.py  manaforge_omega.py  overwhelming_force.py  press_the_advantage.py  t31_brew.py  tww1_brm.py  tww2_ww.py  tww3_moh_2p.py  tww3_moh_2p_v2.py
cache_attribute/: Cargo.toml
cache_attribute/src/: lib.rs
cli/src/: main.rs
libs/: CMakeLists.txt  LinkedList.cpp  LinkedList.hpp
python/: ACCUMULATOR.md  README.md  absorbTicks.json  analysis.py  caching.py  codegen.py  credentials  main.py  norder.py  oldmain.py  pyvenv.cfg  stagger.py  staggerModeling.py  tmp  wcl.py  wcl_n.py
query/: Cargo.toml  build.rs
query/src/: fights.rs  lib.rs  request_points.rs
src/: cache.rs  error.rs  main.rs  query.rs  request.rs  token.rs
warcraftlogs/: Cargo.toml
warcraftlogs/schemas/: warcraftlogs.schema
warcraftlogs/src/: cache.rs  error.rs  lib.rs  main.rs  query.rs  request.rs  token.rs
wcl/: __init__.py  __main__.py  caching.py  interface.py  oauth_token.py  query.py  query_generated.py  request.py  requests.py  schema.json  token.py
wcl/types/: __init__.py  enum.py  enums.py  object.py  objects.py  primitives.py  scalar.py  scalars.py
