[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cynic = { version = "3", features = ["http-reqwest-blocking"] }
reqwest = "=0.12.12"
serde ="1"
serde_json = "1"

[build-dependencies]
cynic-codegen = "3"

[dev-dependencies]
insta =  { version = "1", features = ["yaml"] }
