[package]
name = "crunch"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["cli", "warcraftlogs", "query", "cache_attribute", "analysis"]

[dependencies]
query = { path = "./query" }

[workspace.dependencies]
warcraftlogs = { path = "./warcraftlogs" }
query = { path = "./query" }
cynic = { version = "3", features = ["http-reqwest-blocking"] }
serde = "1"
serde_json = "1"
thiserror = "2"
