[package]
name = "warcraftlogs"
version = "0.1.0"
edition = "2021"
description = "cached warcraftlogs api interface library"

[dependencies]
cynic = { version = "3", features = ["http-reqwest-blocking"] }
reqwest = "=0.12.12"
serde ="1"
serde_json = "1"
flate2 = "1"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
cache_attribute = { path = "../cache_attribute" }

[build-dependencies]
cynic-codegen = "3"
