[package]
name = "warcraftlogs"
version = "0.1.0"
edition = "2021"
description = "cached warcraftlogs api interface library"

[dependencies]
cynic.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
reqwest = "0.12"
flate2 = "1"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
http = "1"
